kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
    - host: frontend-service.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: backend-service.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
